# orderly-connector-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/cpis/solana_vault/: Cargo.toml  LICENSE  README.md  idl.json
crates/cpis/solana_vault/src/: lib.rs
cursor_plan/: deposit_withdrawal.md  trade.md
examples/: account_info.rs  advanced_orders.rs  algo_orders.rs  basic_orders.rs  cancel_order.rs  cancel_orders.rs  close_position.rs  evm_liquidations.rs  get_balance.rs  index_prices_stream.rs  limit_orders.rs  liquidation_stream.rs  liquidations_stream.rs  mark_prices_stream.rs  market_trades_stream.rs  rest_private.rs  rest_public.rs  tp_sl_orders.rs  ws_private.rs  ws_public.rs
src/: auth.rs  error.rs  lib.rs  types.rs
src/eth/: abi.rs
src/rest/: client.rs  mod.rs
src/solana/: client.rs  mod.rs  pdas.rs  signing.rs  types.rs
src/websocket/: client.rs  mod.rs
tests/: algo_orders.rs  basic_orders.rs  common.rs  rest_private.rs  rest_public.rs  tp_sl_orders.rs  websocket_public.rs  ws_private.rs  ws_public.rs
