[package]
name = "orderly-connector-rs"
version = "0.3.7"
edition = "2021"
description = "A Rust client library for interacting with the Orderly Network API"
license = "MIT"
repository = "https://github.com/ranger-finance/orderly-connector-rs"
documentation = "https://docs.rs/orderly-connector-rs"
readme = "README.md"
keywords = ["orderly", "crypto", "trading", "api", "solana"]
categories = ["api-bindings", "cryptography", "network-programming"]
authors = ["Ranger Finance <contact@ranger.finance>"]
homepage = "https://ranger.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
url = "2"
ed25519-dalek = "1.0"
sha2 = "0.10"
base64 = "0.21.7"
hmac = "0.12" # Note: hmac might not be directly needed if using ed25519 directly, but keeping as per plan.
hex = "0.4"
chrono = "0.4"
zeroize = "=1.3.0"
bs58 = "0.5"
serde_qs = "0.13"
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version="1.6.1", features = ["v4"] }
solabi = "0.2.0"

##########
# Solana #
##########
solana-account-decoder = "=1.16.13"
solana-client = "=1.16.13"
solana-address-lookup-table-program = "=1.16.13"
solana-sdk = "=1.16.13"

##########
# Anchor #
##########
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-gen = "=0.3.1"


[dev-dependencies]
dotenv = "0.15" # Added here for tests and examples
env_logger = "0.11" # For initializing logger in examples/tests
mockito = "1.2" # For mocking HTTP requests in tests
tokio-test = "0.4"
